Added text and respective karma tests

--- a/src/app/home/containers/about/about.component.scss
+++ b/src/app/home/containers/about/about.component.scss
@@ -21,6 +21,41 @@
   }
 }
 
+h1 {
+  text-transform: uppercase;
+  font-weight: 700;
+  margin-bottom: .25em;
+}
+
+.subtitle {
+  background: #333;
+  h2 {
+    font-size: 1rem;
+    font-weight: 300;
+    padding: .5rem;
+    color: greenyellow;
+    font-family: 'Roboto Slab', serif;
+    &:before {
+      content: '~mwalters$';
+      margin-right: .5rem;
+      color: white;
+    }
+  }
+}
+
+.mat-card-avatar {
+  height: 90px;
+  margin-top: .25rem;
+  margin-right: .75rem;
+  width: 90px;
+  border-radius: 50%;
+  flex-shrink: 0;
+}
+
+.mat-caption {
+  color: #cccccc;
+}
+
 mat-icon {
   &.javascript {
     color: #f8e01f;
