chore: first commit; feat: add home module;

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
+@import 'material';
 /* You can add global styles to this file, and also import other style files */
+html,
+body {
+  height: 100%;
+}
+body {
+  background-color: mat-color($app-blue-gray, 100);
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+  * {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+}
