feat: add Medium link, chore: Updated packages

--- a/src/app/home/containers/about/about.component.html
+++ b/src/app/home/containers/about/about.component.html
@@ -1,5 +1,5 @@
-<div class="about container" fxLayout="row" fxLayoutWrap fxLayoutAlign="center center">
-  <mat-card class="item" fxFlex="50" fxFlex.sm="75" fxFlex.xs="100">
+<div class="about container">
+  <mat-card class="item">
     <div>
       <div class="mat-display-2" style="text-transform: uppercase;font-weight: 700;margin-bottom: .25em;">Matt Walterspieler</div>
     </div>
@@ -21,7 +21,7 @@
         <h3 matSubheader>Back-end</h3>
         <mat-divider></mat-divider>
         <mat-list-item>
-          <mat-icon svgIcon="nodejs"></mat-icon>Node.js
+          <mat-icon svgIcon="nodejs"></mat-icon>Node.js && (Express || Nest.js)
         </mat-list-item>
         <h3 matSubheader>Deployment</h3>
         <mat-divider></mat-divider>
@@ -34,12 +34,22 @@
       </mat-list>
     </mat-card-content>
     <mat-card-actions fxLayoutAlign="end end">
-      <a mat-button href="https://twitter.com/mwalterspieler" target="_blank"><mat-icon svgIcon="twitter"></mat-icon> Twitter</a>
-      <a mat-button href="https://github.com/walterspieler" target="_blank"><mat-icon svgIcon="github-circle"></mat-icon>
-        Github</a>
+      <a mat-button href="https://twitter.com/mwalterspieler" target="_blank">
+        <mat-icon svgIcon="twitter"></mat-icon> Twitter
+      </a>
+      <a mat-button href="https://github.com/walterspieler" target="_blank">
+        <mat-icon svgIcon="github-circle"></mat-icon>
+        Github
+      </a>
       <a mat-button href="https://www.linkedin.com/in/mattwalters3/" target="_blank">
         <mat-icon svgIcon="linkedin-box"></mat-icon>
-        Linkedin</a>
+        Linkedin
+      </a>
+      <a mat-button href="https://medium.com/@mwalterspieler_31762" target="_blank">
+        <mat-icon svgIcon="medium"></mat-icon>
+        Medium
+      </a>
     </mat-card-actions>
   </mat-card>
+  <p class="mat-caption">Matthieu Walterspieler 2019©</p>
 </div>
