fix: minor change

--- a/src/app/home/containers/about/about.component.html
+++ b/src/app/home/containers/about/about.component.html
@@ -5,7 +5,7 @@
     </div>
     <mat-card-header class="bio">
       <img mat-card-avatar src="assets/matt.jpg">
-      <mat-card-title>Fullstack Webdeveloper</mat-card-title>
+      <mat-card-title>Lead && Fullstack software engineer <a href="https://www.fundee.fr/" target="_blank">@fundee</a></mat-card-title>
       <mat-card-subtitle>Paris <span style="color:black;">🇫🇷 🇪🇺</span></mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
@@ -33,7 +33,7 @@
         </mat-list-item>
       </mat-list>
     </mat-card-content>
-    <mat-card-actions fxLayoutAlign="end end">
+    <mat-card-actions>
       <a mat-button href="https://twitter.com/mwalterspieler" target="_blank">
         <mat-icon svgIcon="twitter"></mat-icon> Twitter
       </a>
@@ -48,6 +48,10 @@
       <a mat-button href="https://medium.com/@mwalterspieler_31762" target="_blank">
         <mat-icon svgIcon="medium"></mat-icon>
         Medium
+      </a>
+      <a mat-button href="https://www.instagram.com/walters_matt/" target="_blank">
+        <mat-icon svgIcon="instagram"></mat-icon>
+        Instagram
       </a>
     </mat-card-actions>
   </mat-card>
