--- a/src/app/home/containers/about/about.component.scss
+++ b/src/app/home/containers/about/about.component.scss
@@ -43,3 +43,14 @@ mat-icon {
   margin-top: .25rem;
   margin-right: 2rem;
 }
+
+a {
+  color: #48bee8;
+}
+
+
+mat-card-actions {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
