chore: add GCP icon

--- a/src/app/home/containers/about/about.component.html
+++ b/src/app/home/containers/about/about.component.html
@@ -11,8 +11,8 @@
     <mat-card-header class="bio">
       <img mat-card-avatar src="assets/matt.jpg" />
       <mat-card-title
-        >Lead && Fullstack software engineer
-        <a href="https://www.fundee.fr/" target="_blank">@fundee</a></mat-card-title
+        >Fullstack software engineer
+        <a href="https://live.fundee.fr/" target="_blank">@fundee</a></mat-card-title
       >
       <mat-card-subtitle>Paris <span style="color:black;">🇫🇷 🇪🇺</span></mat-card-subtitle>
     </mat-card-header>
@@ -21,16 +21,17 @@
         <h3 matSubheader>Front-end</h3>
         <mat-divider></mat-divider>
         <mat-list-item>
-          <mat-icon svgIcon="language-javascript"></mat-icon>Javascript (ES 6)
+          <mat-icon svgIcon="language-javascript"></mat-icon>Javascript
         </mat-list-item>
         <mat-list-item> <mat-icon svgIcon="angular"></mat-icon>Angular & Angularjs </mat-list-item>
         <h3 matSubheader>Back-end</h3>
         <mat-divider></mat-divider>
         <mat-list-item>
-          <mat-icon svgIcon="nodejs"></mat-icon>Node.js && (Express || Nest.js)
+          <mat-icon svgIcon="nodejs"></mat-icon>Node.js && (Nest.js || Express)
         </mat-list-item>
-        <h3 matSubheader>Deployment</h3>
+        <h3 matSubheader>DevOps</h3>
         <mat-divider></mat-divider>
+        <mat-list-item> <fa-icon [icon]="google"></fa-icon> Google Cloud Platform </mat-list-item>
         <mat-list-item> <fa-icon [icon]="docker"></fa-icon> Docker </mat-list-item>
         <mat-list-item> <mat-icon svgIcon="ship-wheel"></mat-icon> Kubernetes (K8s) </mat-list-item>
       </mat-list>
